[package]
name = "bob"
version = "0.0.1"
authors = ["geek <wpreul@gmail.com>"]
edition = "2018"
repository = "https://github.com/krustyrs/bob"
license = "MIT"
readme = "README.md"
description = """
HTTP router
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-types = "1.0.1"
lazy_static = "1.4.0"
fancy-regex = "0.3.3"
